--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,11 @@ body {
   padding: 5px;
   color: #0a0a23;
 }
+
+#monsterStats {
+  display: none;
+  border: 1px solid #0a0a23;
+  padding: 5px;
+  color: #ffffff;
+  background-color: #c70d0d;
+}
